feat: authentication web3 complete

--- a/package.json
+++ b/package.json
@@ -24,19 +24,27 @@
     "typeorm": "npm run build && npx typeorm -d dist/db/data-source.js"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "^9.4.3",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.4.3",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/mapped-types": "^2.0.2",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^3.0.3",
     "@nestjs/swagger": "^7.1.11",
     "@nestjs/typeorm": "^10.0.0",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cache-manager": "^5.2.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "crypto-js": "^4.1.1",
+    "ethers": "^6.7.1",
+    "moment-timezone": "^0.5.43",
     "nestjs": "^0.0.1",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
