--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "fixtures": "fixtures-ts-node-commonjs",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -24,6 +25,7 @@
     "typeorm": "npm run build && npx typeorm -d dist/db/data-source.js"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.1.0",
     "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "^9.4.3",
     "@nestjs/config": "^3.1.1",
@@ -47,7 +49,8 @@
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm-fixtures-cli": "^3.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -68,7 +71,7 @@
     "supertest": "^6.1.3",
     "ts-jest": "29.0.5",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "4.2.0",
     "typescript": "^4.7.4"
   },
