--- a/fixtures/Article.yml
+++ b/fixtures/Article.yml
@@ -1,6 +1,6 @@
-entity: NewsEntity
+entity: ArticleEntity
 items:
-  news{0..9}:
+  article{0..9}:
     title: '{{lorem.word}}'
     content: '{{lorem.paragraphs}}'
     image: '{{image.avatar}}'
@@ -9,7 +9,7 @@ items:
     isActive: true
     likes: 
       - '@user*'
-  news{10..20}:
+  article{10..20}:
     title: '{{lorem.word}}'
     content: '{{lorem.paragraphs}}'
     image: '{{image.avatar}}'
